# url2kindle

./: .gitignore  .lvimrc  LICENSE  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  url2kindle.py
