[tool.poetry]
name = "url2kindle"
version = "0.8"
description = "Send web articles to your Kindle from terminal"
authors = ["Dawid Zych <dwd@mailo.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/silenc3r/url2kindle"
repository = "https://github.com/silenc3r/url2kindle"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.8"

[tool.poetry.scripts]
u2k = "url2kindle:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
