[metadata]
name = url2kindle
version = attr: url2kindle.__VERSION__
author = Dawid Zych
author_email = dwd@mailo.com
description = Send web articles to your Kindle from terminal
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/silenc3r/url2kindle
project_urls =
    Bug Tracker = https://github.com/silenc3r/url2kindle/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Environment :: Console

[options]
python_requires = >=3.6
install_requires =
    requests

[options.entry_points]
console_scripts =
    u2k = url2kindle:main

[flake8]
ignore = W503
max-line-length = 88
